# BalrogCPP

./: CMakeLists.txt  README.md  main.cpp
include/: GeneFinder.cpp  GeneFinder.h
